--- a/Day2/states.html
+++ b/Day2/states.html
@@ -29,11 +29,91 @@
               </li>
             </ul>
             <form class="d-flex">
-                <img src="Flag_of_India.svg.webp" alt="" height="40px" class="me-sm-2">
-                
+              <img src="Flag_of_India.svg.webp" alt="" height="30px" class="me-sm-2" style="border-radius: 25px;"> 
             </form>
           </div>
         </div>
     </nav>
+    
+    <div class="containers">
+      <h1>STATES OF INDIA</h1>
+      <div class="container-fluid">
+        <div class="row ms-1 mt-5">
+          <div class="col-sm-3">
+            <div class="card" style="width:350px; border-radius: 25px;">
+              <img class="card-img-top" src="kerala-cover.jpg" alt="Card image" style="border-top-left-radius: 25px;border-top-right-radius: 25px;object-fit: cover;" height="240px">
+              <div class="card-body">
+                <h4 class="card-title">Kerala</h4>
+                <p class="card-text">Kerala, "God's Own Country", is famous for its backwaters, greenery, and rich culture.</p>
+                <a href="kerala.html" class="btn btn-primary">Know More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width:350px; border-radius: 25px;">
+              <img class="card-img-top" src="Pahalgam_Valley.jpg" alt="Card image" style="border-top-left-radius: 25px;border-top-right-radius: 25px;object-fit: cover;" height="240px">
+              <div class="card-body">
+                <h4 class="card-title">Jammu and Kashmir</h4>
+                <p class="card-text">Jammu & Kashmir, "Paradise on Earth", known for its stunning mountains.</p>
+                <a href="#" class="btn btn-primary">Know More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width:350px; border-radius: 25px;">
+              <img class="card-img-top" src="Kinnaur_Kailash.jpg" alt="Card image" style="border-top-left-radius: 25px;border-top-right-radius: 25px;object-fit: cover;" height="240px">
+              <div class="card-body">
+                <h4 class="card-title">Himachal Pradesh</h4>
+                <p class="card-text">Himachal Pradesh, "Land of Snow", is known for its hill stations.</p>
+                <a href="#" class="btn btn-primary">Know More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width:350px; border-radius: 25px;">
+              <img class="card-img-top" src="Lotus_Temple_in_New_Delhi_03-2016.jpg" alt="Card image" style="border-top-left-radius: 25px;border-top-right-radius: 25px;object-fit: cover;" height="240px">
+              <div class="card-body">
+                <h4 class="card-title">Delhi</h4>
+                <p class="card-text">Delhi, "Heart of India", is known for its history and monuments.</p>
+                <a href="#" class="btn btn-primary">Know More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 ms-1">
+          <div class="col-sm-3">
+            <div class="card" style="width:350px; border-radius: 25px;">
+              <img class="card-img-top" src="Charminar_sumeet_photography_3.jfif" alt="Card image" style="border-top-left-radius: 25px;border-top-right-radius: 25px;object-fit: cover;" height="240px">
+              <div class="card-body">
+                <h4 class="card-title">Hyderabad</h4>
+                <p class="card-text">Hyderabad, "City of Pearls", is known for its biryani and heritage.</p>
+                <a href="#" class="btn btn-primary">Know More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width:350px; border-radius: 25px;">
+              <img class="card-img-top" src="Vantawng_Khawhthla.jpg" alt="Card image" style="border-top-left-radius: 25px;border-top-right-radius: 25px;object-fit: cover;" height="240px">
+              <div class="card-body">
+                <h4 class="card-title">Mizoram</h4>
+                <p class="card-text">Mizoram, "Land of the Hills", is known for its forests and culture.</p>
+                <a href="#" class="btn btn-primary">Know More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width:350px; border-radius: 25px;">
+              <img class="card-img-top" src="BeachFun.jpg" alt="Card image" style="border-top-left-radius: 25px;border-top-right-radius: 25px;object-fit: cover;" height="240px">
+              <div class="card-body">
+                <h4 class="card-title">Goa</h4>
+                <p class="card-text">Goa, "Pearl of the Orient", is known for its beaches and nightlife.</p>
+                <a href="#" class="btn btn-primary">Know More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
 </body>
-</html>
+</html>kerala
