--- a/Day2/index.html
+++ b/Day2/index.html
@@ -14,7 +14,7 @@
 <body>
    
     
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
               </li>
             </ul>
             <form class="d-flex">
-                <img src="Flag_of_India.svg.webp" alt="" height="40px" class="me-sm-2">
+                <img src="Flag_of_India.svg.webp" alt="" height="30px" class="me-sm-2" style="border-radius: 25px;">
                 
             </form>
           </div>
